# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE X.X.X - XXX

  From Lukas Erlinghagen:

    - Have AddOption() remove variables from the list of
      seen-but-unknown variables (which are reported later).

    - An option name and aliases can now be specified as a tuple.

  From Jim Hunziker:

    - Avoid adding -gphobos to a command line multiple times
      when initializing use of the DMD compiler.

  From Steven Knight:

    - Fix the -n option when used with VariantDir(duplicate=1)
      and the variant directory doesn't already exist.

    - Fix scanning of Unicode files for both UTF-16 endian flavors.

    - Fix a TypeError on #include of file names with Unicode characters.

    - Fix an exception if a null command-line argument is passed in.

    - Evaluate Requires() prerequisites before a Node's direct children
      (sources and dependencies).

  From Greg Noel:

    - Remove redundant __metaclass__ initializations in Environment.py.

    - Correct the documentation of text returned by sconf.Result().

    - Document that filenames with '.' as the first character are
      ignored by Glob() by default (matching UNIX glob semantics).

    - Fix SWIG testing infrastructure to work on Mac OS X.

    - Restructure a test that occasionally hung so that the test would
      detect when it was stuck and fail instead.

    - Add the Textfile and Substfile builders.

  From Gary Oberbrunner:

    - When reporting a target that SCons doesn't know how to make,
      specify whether it's a File, Dir, etc.

  From Ben Webb:

    - Fix use of $SWIGOUTDIR when generating Python wrappers.

    - Add $SWIGDIRECTORSUFFIX and $SWIGVERSION construction variables.



RELEASE 1.2.0.d20090223 - Mon, 23 Feb 2009 08:41:06 -0800

  From Stanislav Baranov:

    - Make suffix-matching for scanners case-insensitive on Windows.

  From David Cournapeau:
